# spellcaster

./: .gitignore  Pipfile  camera.py  pyproject.toml  server.py  wand_tracker.py
spellcaster/: pyproject.toml
spellcaster/src/spellcaster/: actions_registry.py  constants.py  db.py  spell_handler.py  spellcaster.py  train.py  wand_tracker.py
spellcaster/src/spellcaster/actions/: default_actions.py
spellcaster/src/spellcaster/modeling/: data.py  data_loader.py  net.py  train.py
spellcaster/src/spellcaster/notebooks/: few-shot.ipynb  view_data.ipynb  view_dataloader.ipynb
spellcaster/src/spellcaster/server/: server.py  spellcaster_viewer.py
spellcaster/src/spellcaster/utils/: __init__.py  wand_path_visualizer.py
spellcaster_client/src/pages/: viewer.jsx
src/spellcaster/: camera.py  constants.py  graceful_shutdown.py  shared_buffer.py  spell_handler.py  spellcaster.py  wand_tracker.py
src/spellcaster/utils/: blob_detector.py  exit_checker.py
src/web/: server.py  spellcaster_manager.py  spellcaster_viewer.py
src/web/templates/: index.html  layout.html
templates/: index.html
web/backend/: server.py
web/frontend/: index.html
web/frontend/src/: App.jsx
web/frontend/src/pages/: actions.jsx  spells.jsx
