[project]
name = "spellcaster"
version = "0.1.0"
requires-python = ">=3.12"
authors = [{name = "Clay James", email = "clay@clayj.xyz"}]
dependencies = [
    "easyfsl>=1.5.0",
    "fastapi>=0.115.0",
    "fire>=0.7.0",
    "numpy<2",
    "opencv-python>=4.10.0.84",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[project.optional-dependencies]
dev = ["jupyter"]

[tool.uv]
package = true

[project.scripts]
spellcaster = "spellcaster.spellcaster:cli"
